Fix wrap communities list

--- a/app/static/static/css/main.css
+++ b/app/static/static/css/main.css
@@ -269,7 +269,8 @@ button[type='submit']:hover {
 .communities {
     display: flex;
     flex-wrap: wrap;
-    max-width: 700px;
+    justify-content: space-around;
+    max-width: 100%;
 }
 .community {
     display: grid;
